tests/paczka1/fuzzy1/97045557.err
Error in line 10: 0ILV S538 28,7
Error in line 12: 0ILV A792 95,0
Error in line 11: S538 S250 77,3
Error in line 17: 922pn S538 1,5
Error in line 20: 0gPU S538 85,2
